--- a/assets/demo/css/site.css
+++ b/assets/demo/css/site.css
@@ -14,6 +14,10 @@ p.tagline { text-align: center; font-size: 120%; line-height: 1; }
 p { font-size: 1.2em; line-height: 1.5; margin-bottom: 20px; }
 a { color: #7fdbff; }
 
+.example_links a {
+	color: #001f3f;
+}
+
 .center {
 	text-align: center;
 }
