--- a/assets/demo/css/site.css
+++ b/assets/demo/css/site.css
@@ -30,7 +30,7 @@ a { color: #7fdbff; }
 
 .container .jumbotron {
 	color: #000;
-	padding: 5px 25px 10px;
+	padding: 10px 25px;
 	text-align: left;
 }
 .jumbotron h6 { color: #999; }
