--- a/assets/demo/css/site.css
+++ b/assets/demo/css/site.css
@@ -20,10 +20,10 @@ p.tagline { text-align: center; font-size: 120%; line-height: 1; }
 p { font-size: 1.2em; line-height: 1.5; margin-bottom: 20px; }
 a { color: #7fdbff; }
 
-.example_links a {
+.example_links a 
+,.docs_links a {
 	color: #001f3f;
 }
-
 .center {
 	text-align: center;
 }
