--- a/assets/demo/css/site.css
+++ b/assets/demo/css/site.css
@@ -64,10 +64,6 @@ a { color: #7fdbff; }
 #video-cont {
 	position: relative;
 }
-#video-cont h6 {
-	text-align: left;
-	padding: 0 10%;
-}
 .thumbs {
 	margin: 10px 0 20px;
 }
@@ -97,6 +93,17 @@ a { color: #7fdbff; }
 	left: 60px;
 	top: 160px;
 	font-size: 64px;
+}
+
+#video-title {
+	margin-bottom: 20px;
+}
+
+.jumbotron-grey {
+	background-color: #aaaaaa;
+}
+.jumbotron-grey h6 {
+	color: #dddddd;
 }
 
 
