--- a/assets/demo/css/site.css
+++ b/assets/demo/css/site.css
@@ -100,7 +100,7 @@ a { color: #7fdbff; }
 }
 
 .jumbotron-grey {
-	background-color: #aaaaaa;
+	background-color: #111111;
 }
 .jumbotron-grey h6 {
 	color: #dddddd;
