--- a/assets/demo/css/site.css
+++ b/assets/demo/css/site.css
@@ -69,7 +69,7 @@ a { color: #7fdbff; }
 }
 .thumbs a {
 	display: inline-block;
-	margin: 0 8px;
+	margin: 4px 8px 6px;
 	border: 1px solid #bbb;
 }
 .html5video-loading #previous
@@ -99,10 +99,12 @@ a { color: #7fdbff; }
 	margin-bottom: 20px;
 }
 
-.jumbotron-grey {
+.container.dark {
 	background-color: #111111;
+	width: 100%;
+	padding: 20px 10%;
 }
-.jumbotron-grey h6 {
+.container.dark h6 {
 	color: #dddddd;
 }
 
